2009-10-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/fuji.themepack:
	* tests/list: Add Windows theme packs (Closes: #23314)

2009-10-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/archive.tar:
	* tests/comics.cbt:
	* tests/list: Add cbt (tarred-up Comic Books),
	patch from juanj.marin@juntadeandalucia.es (Closes: #22724)

2009-10-06  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Make text/vnd.graphviz magic stricter
	so that it doesn't match "paragraph ". (Closes: #22534)
	* tests/list:
	* tests/test.tex: Testcase for the above problem.

2009-10-06  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add kexi mimetypes (from #18109)
	even though the xdgmime bug mentionned in #18109 isn't fixed.

	* tests/list:
	* tests/sqlite2.kexi:
	* tests/sqlite3.kexi: Add testcase for kexi mimetypes.

2009-10-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.lzo: Add acronym, magic and test case for LZO
	archives, patch from Ville Skyttä <ville.skytta@iki.fi>
	(Closes: #22861)

2009-10-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add acronyms for CSV and TSV,
	patch from Ville Skyttä <ville.skytta@iki.fi> (Closes: #22860)

2009-10-06  Bastien Nocera  <hadess@hadess.net>

	* tests/list: Add test case for core vs. Core files
	(Closes: #22634)

2009-10-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.lz: Add application/x-lzip mime-type, patch from
	Ville Skyttä <ville.skytta@iki.fi> (Closes: #23258)

2009-10-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add tar.bz2 files as subclasses of
	application/x-bzip-compressed-tar, patch by traydent@gmail.com
	(Closes: #23391)

2009-10-05  Bastien Nocera  <hadess@hadess.net>

	* HACKING:
	* Makefile.am: Update for transifex.net use

2009-10-02  Alexander Larsson  <alexl@redhat.com>

	* freedesktop.org.xml.in: