@@ -136,6 +136,14 @@ command to generate the output files.
     </magic>
     <glob pattern="*.mbox"/>
   </mime-type>
+  <mime-type type="application/metalink+xml">
+    <_comment>Metalink file</_comment>
+    <sub-class-of type="application/xml"/>
+    <magic priority="50">
+      <match type="string" value="&lt;metalink" offset="0:256"/>
+    </magic>
+    <glob pattern="*.metalink"/>
+  </mime-type>
   <mime-type type="application/octet-stream">
     <_comment>unknown</_comment>
     <glob pattern="*.bin"/>
