@@ -168,6 +168,8 @@ test.ttx application/x-font-ttx
 project.glade application/x-glade
 # Copied from http://bugs.freedesktop.org/show_bug.cgi?id=14085
 ISOcyr1.ent application/xml-external-parsed-entity ox
+# Copied from http://www.metalinker.org/samples/abiword-setup-2.4.6.exe.metalink
+test.metalink application/metalink+xml
 
 # Archives
 # Copied from http://bugs.freedesktop.org/show_bug.cgi?id=14909
